Prussian nat spirits GFX and some loc

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -141,6 +141,7 @@
   add_potential_special_forces_tree_tt:0 "Special Forces Branch Cap: §G+1§!"
   PRS_Leave_Russian_Sphere_tt:0 "Prussia leaves the [RUS.GetFlag] Russian §HSphere of Influence§!"
   PRS_Join_French_Sphere_tt:0 "Prussia joins the [FRA.GetFlag] French §HSphere of Influence§!"
+  PRS_Has_Claimed_or_Annexed_Land:0 "Prussia has resolved the Berlin issue with Russia"
 
   ##########################
   # MECHANICS
@@ -711,11 +712,11 @@
   PB_PRS_Reeducation_Efforts:0 "Re-education Efforts"
   PB_PRS_Reeducation_Efforts_desc:0 "Doctrinal realignments are still neccesary to root out the most fanatic of Bouhler's military supporters, whilst not as harsh as we had once planned we cannot let neo-imperialist ideology find comfort within our military."
   PB_PRS_The_New_Guard:0 "The New Guard"
-  PB_PRS_The_New_Guard_desc:0 ""
+  PB_PRS_The_New_Guard_desc:0 "Today our nation must stand ready and armed against all threats, external and internal. The Prussian solider will be core to this new state identity that we wish to promote. "
   PB_PRS_Not_A_Stone_Unturned:0 "Not A Stone Unturned"
-  PB_PRS_Not_A_Stone_Unturned_desc:0 ""
+  PB_PRS_Not_A_Stone_Unturned_desc:0 "Why shall we permit those who had not so long ago had wished us death to continue influencing the military affairs of our state. No, this injustice ends now, let all those who wished to see our downfall rot in hell, long live sacred Prussia!"
   PB_PRS_Out_With_The_Fanatics:0 "Out With The Fanatics"
-  PB_PRS_Out_With_The_Fanatics_desc:0 ""
+  PB_PRS_Out_With_The_Fanatics_desc:0 "No more loose ends, no more half-ass attempts. Even a stench of loyalty to the old regime will be undone. In their place we shall find new eager men, and old loyalists to fill the spaces they once occupied."
   PB_PRS_A_Legacy_Saved:0 "A Legacy Saved"
   PB_PRS_A_Legacy_Saved_desc:0 ""
   PB_PRS_The_New_Imperial_Man:0 "The New Imperial Man"
