Slightly Overdue Cosmist Russia Work

--- a/localisation/english/PB_Super_Technologies_l_english.yml
+++ b/localisation/english/PB_Super_Technologies_l_english.yml
@@ -25,3 +25,5 @@
   SPTECH_Recursive_Immortality_TEXT:0 "§CRecursive Immortality§!\n\nGenerals will no longer die of old age and gain the §CRecursive Immortality§! trait, granting a §G-75%§! Chance of Illness and Wounding Chance.\n\n"Death borders upon our birth; and our cradle stands in our grave."\n- §YJoseph Hall§!"
   SPTECH_Recursive_Immortality_CLOSETEXT:0 "§CTHE LAST ENEMY THAT SHALL BE DESTROYED§!"
   
+  SPTECH_Clinical_Immortality_TEXT:0 "§CClinical Immortality§!\n\nGenerals will no longer die of old age and gain the §CRecursive Immortality§! trait, granting a §G-75%§! Chance of Illness and Wounding Chance.\n\n""\n- §YJoseph Hall§!"
+  SPTECH_Clinical_Immortality_CLOSETEXT:0 "§CTHE MARCH OF TIME, STOPPED IN ITS TRACKS§!"
