Rasputin Sex Mechanics :fire:
- Started working on Rasputin shit

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -481,10 +481,10 @@
   postwar_russia.4.a:0 "A drop of blood for a drop of oil."
 
   postwar_russia.5.t:0 "SITUATION REPORT - PERSIA"
-  postwar_russia.5.d:0 ""
-  postwar_russia.5.a:0 "We can spare a few shipments of guns."
-  postwar_russia.5.b:0 "Send them as many guns as they need."
-  postwar_russia.5.c:0 "Tensions with Russia are too high right now."
+  postwar_russia.5.d:0 "CONFIDENTIAL\n\nThe situation in Iran has escalated far more quickly than anyone on the ground expected. Reports already indicate Russian troops smashing through hastily constructed Iranian fortifications. The situation in the capital has become anarchic as the weight of Russian domination becomes suffocating for everyone. Many have already begun to recommend an evacuation of all assets as well as a burning of all important files in the embassy.\n\nHowever, a minority group has already begun to consider funding and modernizing the Iranian forces as rapidly as possible to make the lumbering bear pay for every step they take in Iranian territory. They believe that such an action would not only harm our new adversaries across the continent but also reinforce French interests in the region.\n\nThe majority of those here believe that such an action would be too insignificant and come far too late to alter the course of the invasion. Most diplomats in the embassy believe that such an action would anger Russia and escalate tensions without benefiting France or assisting Iran in any manner.\n\nThe decision is a significant one and has thus been sent forward to Paris to make the decision. The decision must come fast though as Russian artillery can already be heard from Tehran.\n\nOne France, One People, One Leader\nSP TEHRAN FORWARD OPERATING BASE\nEND REPORT"
+  postwar_russia.5.a:0 "Get the army to donate some old guns."
+  postwar_russia.5.b:0 "Send them as much equipment as they need."
+  postwar_russia.5.c:0 "Tell them to extract all assets and exit."
 
   postwar_russia.6.t:0 "Sudetenland Conference"
   postwar_russia.6.d:0 ""
