nohan's loc part 2

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -715,6 +715,7 @@
   PB_RUS_Support_Norwegian_Independence:0 "Support Norwegian Independence"
   PB_RUS_Support_Kurdish_Irredentism:0 "Support Kurdish Irredentism"
   PB_RUS_Deploy_the_Okhrana_in_Prussia:0 "Deploy the Okhrana in Prussia"
+  PB_RUS_Deploy_the_Okhrana_in_Prussia_desc:0 "Ah, Prussia, the one that got away. Though for the most part, they have been behaved well enough to keep them out of our focuses, recently the government in Konigsburg has gotten uppity and has began working against us. We should send in the Okhrana to remind of them of their place."
   PB_RUS_Reinforce_the_hungarian_border:0 "Reinforce the Hungarian Border"
   PB_RUS_Reinforce_the_hungarian_border_desc:0 "During the National Awakening in the 1920s, the Hungarian border was left unguarded, and as a result, weapons from the degenerate government in Budapest flowed with abandon to the rebels. Even after the uprisings were crushed, Hungarian weapons trickled into the rump Galician government's territory, empowering the stubborn rebels there. Now, with the failure of a bulwark removed, it is time we reenforce the border so no more of these accursed weapons end up in rebel hands."
   PB_RUS_Dreams_of_a_russian_colony:0 "Dreams of a Russian Colony"
@@ -723,6 +724,7 @@
   PB_RUS_Retain_our_commitments_to_Serbia:0 "Retain our Commitments to Serbia"
   PB_RUS_Retain_our_commitments_to_Serbia_desc:0 "Our little brother in the Balkans, Serbia, is preparing for a coming clash with the foul revolutionaries in Hungary and their Bulgarian allies. We should assist them so they will regain the honor and sanity of Serbdom. This will prove useful later down the line."
   PB_RUS_Reorient_towards_the_bulgars:0 "Reorient towards the Bulgars"
+  PB_RUS_Reorient_towards_the_bulgars_desc:0 "The Serbs, despite our brotherhood, are not bordering our Tsargrad holding. On the other hand, there is Bulgaria, which does border Tsargrad. Their alliance with the Jacobins in Budapest, impromptu it may be, is something that should be fixed at once. We will begin work on drawing them out of their impromptu alliance with the Jacobins in Budapest and bringing them firmly into our sphere, even though it may cost us our Serbian allies. We installed the Bulgarian prince, so hopefully they will be receptive to our overtures."
   PB_RUS_Pressure_the_qajars:0 "Pressure the Qajars"
   PB_RUS_Offer_advisors_to_the_Greeks:0 "Offer Advisors to the Greeks"
   PB_RUS_Reinforce_occupied_Germany:0 "Reinforce Occupied Germany"
