Prussian Focus Loc + some additional fixes

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -740,19 +740,19 @@
   PB_PRS_Reform_The_Royal_Army:0 "Reform The Royal Army"
   PB_PRS_Reform_The_Royal_Army_desc:0 "The armed forces of Prussia have seen much reform over the years, however they still lack proper doctrinal theory and will likely faulter under the weight of any modern advancing armies. We need to adapt and equip our forces for a potential Second Great War. "
   PB_PRS_Reform_The_Royal_Airforce:0 "Reform The Royal Airforce"
-  PB_PRS_Reform_The_Royal_Airforce_desc:0 ""
+  PB_PRS_Reform_The_Royal_Airforce_desc:0 "The Prussian airforce has been in a state of neglect since the Great War, its about time we restored high command's interest in aviation. Only through generous investments in the development of fighter craft can we expect to secure our skies from any threats above ground."
   PB_PRS_Reform_The_Royal_Navy:0 "Reform The Royal Navy"
-  PB_PRS_Reform_The_Royal_Navy_desc:0 ""
+  PB_PRS_Reform_The_Royal_Navy_desc:0 "The Prussian navy has seen better days, currently it sports a few destroyers and a single heavy crusier, if we expect ourselves to secure our vital baltic shipping lanes then an increase of investments in the naval sector will be required."
   PB_PRS_Europes_Eastern_Legion:0 "Europe's Eastern Legion"
-  PB_PRS_Europes_Eastern_Legion_desc:0 ""
+  PB_PRS_Europes_Eastern_Legion_desc:0 "To the east lays the mortal enemy of the Prussian people, without a swift and effective campaign against such a threat we should expect a long and drawn out conflict, one that we can ill afford. With sword and shield shall we lay wastes to Russia, however we must do so in a quick manner else we may risk upsetting our general staff, who may overthrow our regime should the opportunity present itself. "
   PB_PRS_Demand_Memel:0 "Demand Memel"
-  PB_PRS_Demand_Memel_desc:0 ""
+  PB_PRS_Demand_Memel_desc:0 "Memel holds many ethnic Prussians, should Russia continue their illegal occupation of such lands then we will likely see our people in the region deported and our claim to the land forever gone. We must press our claims now before Europe is caught up in another world war."
   PB_PRS_Contact_Pilsudski:0 "Contact Pilsudski"
-  PB_PRS_Contact_Pilsudski_desc:0 ""
+  PB_PRS_Contact_Pilsudski_desc:0 "Pilsudski resistance has been a thorn in Russia's side for quite some time, he and his band of rebels have managed to wreck havoc agaisnt Russia's administration in Warsaw and some believe that allying with Pilsudski could prove fruitful."
   PB_PRS_Teutonic_Legacy:0 "Teutonic Legacy"
-  PB_PRS_Teutonic_Legacy_desc:0 ""
+  PB_PRS_Teutonic_Legacy_desc:0 "Long ago Prussia was home to a disciplined army whom had resisted the slavic hordes of the east. We shall find purpose within this history and revive this long lost facet of our culture."
   PB_PRS_Arm_The_Forest_Brothers:0 "Arm The Forest Brothers"
-  PB_PRS_Arm_The_Forest_Brothers_desc:0 ""
+  PB_PRS_Arm_The_Forest_Brothers_desc:0 "The situation in the Baltics has proven dire amongst the native Baltans. Many have held a sympathetic view to our nation, and some have made their way to our borders seaking refuge. Bouhler had previously welcomed such people as and we intend to go even further, by arming them in prepartion for a timely uprising that may be to our benefit."
   PB_PRS_Economic_Restructuring:0 "Economic Restructuring"
   PB_PRS_Economic_Restructuring_desc:0 ""
   PB_PRS_Recalibrate_The_Factories:0 "Recalibrate The Factories"
@@ -837,7 +837,7 @@
   Prussian.4.t:0 "Posen In Flames"
   Prussian.4.d:0 "Ever since our war of independence against Russia the territory of Posen has been under our de-facto control. Whilst on paper Posen is under the rule of the Polish government in practice Warsaw excises no authority over the land in any capacity. We have had a permanent presence in the region for some time now and Bouhler intends on incorporating Posen into a core part of the Prussian nation. The next few months may prove to be difficult but if we stamp out Polish sentiment now then we can finally secure ourselves this vital region of strategic importance." 
   Prussian.4.a:0 "This can't be good."
-  Prussian.5.t:0 "Prussia Attempts A Compromise"
+  Prussian.5.t:0 "Prussia Attempts A Compromise"  #Doesn't need loc
   Prussian.5.d:0 "" 
   Prussian.5.a:0 "Posen is Polish."
   Prussian.5.b:0 "Something is better than nothing."
@@ -947,8 +947,6 @@
   Prussian.33.d:0 "" 
   Prussian.33.a:0 "A cancer on out great nation."
 
-
-  
   Prussian_Anarcho.1.t:0 "Prussian Exiles Arrive"
   Prussian_Anarcho.1.d:0 "" 
   Prussian_Anarcho.1.a:0 "Anything To Further The Neo-Imperialist Cause"
@@ -972,7 +970,6 @@
   Prussian_Anarcho.7.d:0 "" 
   Prussian_Anarcho.7.a:0 "Never again."
 
-
   ##########################
   # COSMETIC TAGS
   ##########################
@@ -981,8 +978,8 @@
   GREATER_PRS_DEF:0 "the Greater Prussian Reich"
   GREATER_PRS_ADJ:0 "Prussian"
 
-  GREATER_PRS_2:0 "GroBpreuBisches Reich"
-  GREATER_PRS_2_DEF:0 "GroBpreuBisches Reich"
+  GREATER_PRS_2:0 "Greater German Reich"
+  GREATER_PRS_2_DEF:0 "the Greater German Reich"
   GREATER_PRS_2_ADJ:0 "PreuBisches"
 
   PRS_Universal_Empire:0 "Universal Empire"
