why do i even write these? just to suffer?

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -193,6 +193,12 @@
   PB_RUS_Empire_Of_Faith:0 "Empire of Faith"
   PB_RUS_Divine_Debauchury:0 "Divine Debauchery"
 
+  PB_RUS_Rasputin_Influence_1:0 "Raputinite Influences - §YVery Small§!"
+  PB_RUS_Rasputin_Influence_2:0 "Raputinite Influences - §YSmall§!"
+  PB_RUS_Rasputin_Influence_3:0 "Raputinite Influences - §YMedium§!"
+  PB_RUS_Rasputin_Influence_4:0 "Raputinite Influences - §YLarge§!"
+  PB_RUS_Rasputin_Influence_5:0 "Raputinite Influences - §YVery Large§!"
+
   ##########################
   # EVENTS
   ##########################
@@ -1083,6 +1089,8 @@
   PB_RUS_Oil_Extraction:0 "Oil Extraction"
   PB_RUS_Aluminium_Extraction:0 "Aluminium Extraction"
 
+  PB_RUS_Rasputin_Influence:0 "The Rasputin Issue"
+  PB_RUS_Rasputin_Influence_desc:0 "\n\n\n\n\n\ninsert desc later"
   PB_RUS_Rasputin_Influence_Growth:0 "Rasputin's Influence Grows..."
   PB_RUS_Raids_Across_Siberia:0 "Raid Rasputinite Cult Safehouses"
   PB_RUS_Purge_Rasputin_Aligned_Politicians:0 "Purge Suspected Rasputinite Politicians"
@@ -1133,6 +1141,10 @@
 
   PB_RUS_Army_Branch_Selected:0 "Army Branch Selected"
   PB_RUS_Navy_Branch_Selected:0 "Navy Branch Selected"
+
+  PB_RUS_Weakened_Public_Support:0 "Rasputin Has Lost Public Support"
+  PB_RUS_Scouted_Rasputin:0 "Rasputin's Exact Whereabouts Have Been Discovered"
+  PB_RUS_Prepared_Operation:0 "The Soldiers Are Ready"
   
   ########################## 
   # TOOLTIPS
@@ -1237,9 +1249,9 @@
 
   PB_RUS_Intensify_Russification_tt:0 "Increase the Culture Convert Rate to §Y+12%.§!\n\nCulture Conversion will be §RDisabled§!"
 
-  PB_RUS_Prepare_Special_Forces_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times to complete preperations for Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Prepare_Special_Forces_times_taken_var]§!/§Y3§!."
-  PB_RUS_Gain_Cult_Intel_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times to complete preperations for Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Gain_Cult_Intel_times_taken_var]§!/§Y3§!."
-  PB_RUS_Publicize_Rasputin_Immorality_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times to complete preperations for Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Publicize_Rasputin_Immorality_times_taken_var]§!/§Y3§!."
+  PB_RUS_Prepare_Special_Forces_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Prepare_Special_Forces_times_taken_var]§!/§Y3§!."
+  PB_RUS_Gain_Cult_Intel_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Gain_Cult_Intel_times_taken_var]§!/§Y3§!."
+  PB_RUS_Publicize_Rasputin_Immorality_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Publicize_Rasputin_Immorality_times_taken_var]§!/§Y3§!."
 
   PB_RUS_Decrease_Rasputin_Influence_Small:0 "§GDecrease§! the popularity of the §YRasputinite Cult§! by a §Y5%§!.\n"
   PB_RUS_Decrease_Rasputin_Influence_Medium:0 "§GDecrease§! the popularity of the §YRasputinite Cult§! by a §Y10%§!.\n"
@@ -1285,10 +1297,18 @@
   PB_RUS_decision_cost_Support_Equipment_200_blocked:0 "£support_equipment §R200§!"
   PB_RUS_decision_cost_Support_Equipment_200_tooltip:0 "It costs £support_equipment §Y200§! to take the decision"
 
-  PB_RUS_decision_cost_Raids_Across_Siberia:0 "£manpower_texticon §Y2500§! £infantry_equipment §Y250§! £command_power  §Y10§!"
-  PB_RUS_decision_cost_Raids_Across_Siberia_blocked:0 "£manpower_texticon §R2500§! £infantry_equipment §R250§! £command_power  §R10§!"
-  PB_RUS_decision_cost_Raids_Across_Siberia_tooltip:0 "It costs £manpower_texticon §Y2500§! £infantry_equipment §Y250§! £command_power  §Y10§! to take the decision"
+  PB_RUS_decision_cost_Raids_Across_Siberia:0 "£manpower_texticon §Y2500§! £infantry_equipment_text_icon §Y250§! £command_power  §Y10§!"
+  PB_RUS_decision_cost_Raids_Across_Siberia_blocked:0 "£manpower_texticon §R2500§! £infantry_equipment_text_icon §R250§! £command_power  §R10§!"
+  PB_RUS_decision_cost_Raids_Across_Siberia_tooltip:0 "It costs £manpower_texticon §Y2500§! £infantry_equipment_text_icon §Y250§! £command_power  §Y10§! to take the decision"
 
-  PB_RUS_decision_cost_Prepare_Special_Forces:0 "£command_power  §Y15§!"
-  PB_RUS_decision_cost_Prepare_Special_Forces_blocked:0 "£command_power  §R15§!"
-  PB_RUS_decision_cost_Prepare_Special_Forces_tooltip:0 "It costs £command_power  §Y15§! to take the decision"
+  PB_RUS_decision_cost_Prepare_Special_Forces:0 "£command_power §Y15§!"
+  PB_RUS_decision_cost_Prepare_Special_Forces_blocked:0 "£command_power §R15§!"
+  PB_RUS_decision_cost_Prepare_Special_Forces_tooltip:0 "It costs £command_power §Y15§! to take the decision"
+
+  PB_RUS_decision_cost_Mass_Arrests:0 "£stability_texticon §Y5§!"
+  PB_RUS_decision_cost_Mass_Arrests_blocked:0 "£stability_texticon §R5§!"
+  PB_RUS_decision_cost_Mass_Arrests_tooltip:0 "It costs £stability_texticon §Y5§! to take the decision"
+
+  PB_RUS_decision_cost_Assassinate_Rasputin:0 "£command_power §Y30§!"
+  PB_RUS_decision_cost_Assassinate_Rasputin_blocked:0 "£command_power §R30§!"
+  PB_RUS_decision_cost_Assassinate_Rasputin_tooltip:0 "It costs £command_power §Y30§! to take the decision"
