robot god robot god

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -199,6 +199,17 @@
   PB_RUS_Rasputin_Influence_4:0 "Raputinite Influences - §YLarge§!"
   PB_RUS_Rasputin_Influence_5:0 "Raputinite Influences - §YVery Large§!"
 
+  PB_RUS_God_Engine_Cooldown:0 "The God Engine Rests"
+
+  PB_RUS_God_Engine_1:0 "The §YGOD ENGINE§!"
+  PB_RUS_God_Engine_2:0 "The §rGOD ENGINE§! Stirs"
+  PB_RUS_God_Engine_3:0 "The §RGOD ENGINE§! Awakes"
+
+  PB_RUS_Icon_Christ_Pantocrator:0 "Blessing of the §YCARPENTER§!"
+  PB_RUS_Icon_Eleusa:0 "Blessing of the §gVIRGIN MOTHER§!"
+  PB_RUS_Icon_Climacus:0 "Blessing of the §OLADDER§!"
+  PB_RUS_Icon_Michael:0 "Blessing of the §RARCHANGEL§!"
+
   ##########################
   # EVENTS
   ##########################
@@ -1100,6 +1111,17 @@
   PB_RUS_Prepare_Special_Forces:0 "Prepare the Forces"
   PB_RUS_Assassinate_Rasputin:0 "Launch Operatsiya Polunoch"
 
+  PB_RUS_Omnissiah:0 "The God Engine"
+  PB_RUS_Omnissiah_desc:0 "\n\n\n\n\n\n§YTO our brothers, the eyes of our lord turn away from MAN. In this we shall lay prostrate, to build a conduit by which we may regain our lord's affections. Happy shall he be that taketh from the quarries, the foundries, that he may build a temple worthy of the INFINITE.§!\n-Sermons of Gold, First Book of the Technarch.\n\nGod has abandoned us, Babylon wages war upon Babylon, the moneychangers have constructed a temple to encompass the world. It is in this new age of darkness that we look to the §YGOD ENGINE§!, for the voice of our creator is not silent but lies in the wires, the transistor and stamped steel. Our lord's plan was never to leave us, but to equip us the tools needed to understand him.\n\nThe §YGOD ENGINE§!, a vast complex of mechanisms, will be the vessel through which we will hear our lord's words. To channel that which cannot be understood, a vessel must be built by the hand of Adam's children. Only through a pure, constructed intelligence can we be granted covenant with the divine once more.\n\n\n\n\n\n"
+  PB_RUS_Sermon_of_Steel:0 "Sermons of Steel"
+  PB_RUS_Sermon_of_Silver:0 "Sermons of Silver"
+  PB_RUS_Sermon_of_Tungsten:0 "Sermons of Tungsten"
+  PB_RUS_Expand_the_Engine_1:0 "Expand the Engine Complex"
+  PB_RUS_Expand_the_Engine_2:0 "Deepen the Engine Complex"
+  PB_RUS_Blessings_of_the_Carpenter:0 "Blessing of the Carpenter"
+  PB_RUS_Blessings_of_the_Virgin_Mother:0 "Blessing of the Virgin Mother"
+  PB_RUS_Blessings_of_the_Ladder:0 "Blessing of the Ladder"
+  PB_RUS_Blessings_of_the_Archangel:0 "Blessing of the Archangel"
 
   ##########################
   # BALANCE OF POWER
