--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -193,11 +193,11 @@
   PB_RUS_Empire_Of_Faith:0 "Empire of Faith"
   PB_RUS_Divine_Debauchury:0 "Divine Debauchery"
 
-  PB_RUS_Rasputin_Influence_1:0 "Raputinite Influences - §YVery Small§!"
-  PB_RUS_Rasputin_Influence_2:0 "Raputinite Influences - §YSmall§!"
-  PB_RUS_Rasputin_Influence_3:0 "Raputinite Influences - §YMedium§!"
-  PB_RUS_Rasputin_Influence_4:0 "Raputinite Influences - §YLarge§!"
-  PB_RUS_Rasputin_Influence_5:0 "Raputinite Influences - §YVery Large§!"
+  PB_RUS_Rasputin_Influence_1:0 "Raputinite Influences - §5Very Small§!"
+  PB_RUS_Rasputin_Influence_2:0 "Raputinite Influences - §5Small§!"
+  PB_RUS_Rasputin_Influence_3:0 "Raputinite Influences - §5Medium§!"
+  PB_RUS_Rasputin_Influence_4:0 "Raputinite Influences - §5Large§!"
+  PB_RUS_Rasputin_Influence_5:0 "Raputinite Influences - §5Very Large§!"
 
   PB_RUS_God_Engine_Cooldown:0 "The God Engine Rests"
 
@@ -530,9 +530,10 @@
   Russia_Rasputin.2.d:0 ""
   Russia_Rasputin.2.a:0 ""
 
-  Russia_Rasputin.3.t:0 "The Second Death of Christ"
-  Russia_Rasputin.3.d:0 ""
-  Russia_Rasputin.3.a:0 "Ladies and gentlemen we got him."
+  Russia_Rasputin.3.t:0 "Crucifixion by the Bullet"
+  Russia_Rasputin.3.d:0 "The buzzards floated like honey bees as they escorted his unit to their destination. The Staff Sergeant could finally understand why the pilots called them buzzards; the engines would have blended in with the sounds of springtime. He looked down as his feet dangled over the edge, the rolling hills and forests of the Far East seemed endless, a true Russian beauty; it’s no wonder that crazed religious bastard chose to hide here, he thought. He gazed out towards the target on the horizon, a safehouse of the Rasputinite cult that infested Siberia like the native silk moths.\n\nThe touchdown went exactly as they had trained. As his feet hit the ground, his earpiece crackled to life, giving the Tsar and highest members of government a direct link to the men on the ground. The sprawling complex lay before them with multiple routes to the uppermost suite where intelligence believed Rasputin was. The Staff Sergeant gave his orders; jet troopers flew to the upper levels of the compound, hard suits charged through walls with concrete crumpling like paper, and razormaidens gleefully massacred every cultist they saw, eviscerating and dissecting indiscriminately. The Staff Sergeant, for his part, took the most direct way to Rasputin’s suspected room, the stairs to Rasputin’s personal suite.\n\nAfter exploring countless empty rooms and climbing even more stairs, the Staff Sergeant finally found the man who had terrorized the Siberian wastes lying in his bed with his arms around two women on each side. The man of god hardly looked like the embodiment of Christ that the cult desperately tried to project and advertise. He had the stock of a Siberian peasant with filthy, unshaven facial hair that would have been scorned in St. Petersburg. His face was gaunt and showed the stress and strains of being hunted by Earth’s mightiest empire and her feared intelligence service, the Okhrana. It seemed like the game of cat and mouse had aged him by decades as premature wrinkles racked the holy man’s face. The face reminded him of his grandfather. The connection and familial face weren't enough to save Rasputin, however. The Staff Sergeant hardly hesitated as he crucified Rasputin with a cross of bullets across his chest. He ignored the screams of the women and radioed back to headquarters."
+  Russia_Rasputin.3.a:0 ""Ladies and gentlemen we got him.""
+  Russia_Rasputin.3.a.tt:0 "§RThe Shot Heard Around the World§!"
 
   Russia_Rasputin.4.t:0 "Rasputin Survives the Drink"
   Russia_Rasputin.4.d:0 ""
@@ -549,6 +550,10 @@
   ##########################
   # GUI DESCRIPTIONS
   ##########################
+  Rasputin_Influence_1_tt:0 "At 10% Rasputinite Influence, the following national spirit will be activated: Raputinite Influences - §5Small§!\n§R-10% Stability§!\n§R-15% Political Power Gain§!\n§G+10% Division Recovery Rate§!"
+  Rasputin_Influence_2_tt:0 "At 25% Rasputinite Influence, the following national spirit will be activated: Raputinite Influences - §5Medium§!\n§R-15% Stability§!\n§R-20% Political Power Gain§!\n§G+500 Weekly Manpower§!\n§G+5% Division Organization§!\n§G+15% Division Recovery Rate§!"
+  Rasputin_Influence_3_tt:0 "At 50% Rasputinite Influence, the following national spirit will be activated: Raputinite Influences - §5Large§!\n§R-20% Stability§!\n§R-25% Political Power Gain§!\n§G+800 Weekly Manpower§!\n§G+8% Division Organization§!\n§G+20% Division Recovery Rate§!"
+  Rasputin_Influence_4_tt:0 "At 75% Rasputinite Influence, Rasputin will coup the government, activating his hidden path. The following national spirit will also be activated: Raputinite Influences - §5Very Large§!\n§R-20% Stability§!\n§R-25% Political Power Gain§!\n§G+800 Weekly Manpower§!\n§G+10% Division Organization§!\n§G+25% Division Recovery Rate§!"
   
   ##########################
   # FOCUS
@@ -1103,7 +1108,7 @@
   PB_RUS_Rasputin_Influence:0 "The Rasputin Issue"
   PB_RUS_Rasputin_Influence_desc:0 "\n\n\n\n\n\ninsert desc later"
   PB_RUS_Rasputin_Influence_Growth:0 "Rasputin's Influence Grows..."
-  PB_RUS_Raids_Across_Siberia:0 "Raid Rasputinite Cult Safehouses"
+  PB_RUS_Raids_Across_Siberia:0 "Raid Rasputinite Safehouses in [FROM.GetName]"
   PB_RUS_Purge_Rasputin_Aligned_Politicians:0 "Purge Suspected Rasputinite Politicians"
   PB_RUS_Mass_Arrests:0 "Mass Arrests"
   PB_RUS_Publicize_Rasputin_Immorality:0 "Anti-Rasputin Smear Campaigns"
@@ -1271,15 +1276,16 @@
 
   PB_RUS_Intensify_Russification_tt:0 "Increase the Culture Convert Rate to §Y+12%.§!\n\nCulture Conversion will be §RDisabled§!"
 
-  PB_RUS_Prepare_Special_Forces_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Prepare_Special_Forces_times_taken_var]§!/§Y3§!."
-  PB_RUS_Gain_Cult_Intel_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Gain_Cult_Intel_times_taken_var]§!/§Y3§!."
-  PB_RUS_Publicize_Rasputin_Immorality_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Publicize_Rasputin_Immorality_times_taken_var]§!/§Y3§!."
+  PB_RUS_Prepare_Special_Forces_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Prepare_Special_Forces_times_taken_var]§!/§Y3§!.\n"
+  PB_RUS_Gain_Cult_Intel_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Gain_Cult_Intel_times_taken_var]§!/§Y3§!.\n"
+  PB_RUS_Publicize_Rasputin_Immorality_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Publicize_Rasputin_Immorality_times_taken_var]§!/§Y3§!.\n"
 
-  PB_RUS_Decrease_Rasputin_Influence_Small:0 "§GDecrease§! the popularity of the §YRasputinite Cult§! by a §Y5%§!.\n"
-  PB_RUS_Decrease_Rasputin_Influence_Medium:0 "§GDecrease§! the popularity of the §YRasputinite Cult§! by a §Y10%§!.\n"
-  PB_RUS_Decrease_Rasputin_Influence_Large:0 "§GDecrease§! the popularity of the §YRasputinite Cult§! by a §Y25%§!.\n"
+  PB_RUS_Decrease_Rasputin_Influence_Small:0 "§GDecrease§! the popularity of the §YRasputinite Cult§! by §Y5%§!.\n"
+  PB_RUS_Decrease_Rasputin_Influence_Medium:0 "§GDecrease§! the popularity of the §YRasputinite Cult§! by §Y10%§!.\n"
+  PB_RUS_Decrease_Rasputin_Influence_Large:0 "§GDecrease§! the popularity of the §YRasputinite Cult§! by §Y25%§!.\n"
 
-  PB_RUS_Assassinate_Rasputin_tt:0 "Begin §2Operatsiya Polunoch§!"
+  PB_RUS_Rasputin_Influence_Growth_tt:0 "§RInccrease§! the popularity of the §YRasputinite Cult§! by §Y5%§!.\n"
+  PB_RUS_Assassinate_Rasputin_tt:0 "Begin §2Operatsiya Polunoch§!\n"
 
   #######################
   # PARTIES
