UC Locals and Stuff

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -903,7 +903,7 @@
   PBNews.228.a:0 "The Jacobin cause spreads."
 
   PBNews.229.t:0 "LONG DIES, AGED 41"
-  PBNews.229.d:0 "Tragedy struck today as Acadiana Minister Huey Long fell to his death while touring the Melbourne Agroplex. The Southern American populist had been growing in popularity for the last few years, arguing for an aggressive wealth redistribution plan to tackle Acadiana's high unemployment and poverty.\n\nVisiting the Greater Melbourne Agroplex, Long was seeking solutions to the nation's population concentrations, but instead found tragedy when he lost his footing. According to witnesses, Long tumbled for over two minutes down a flight of stairs before being rushed to emergency care, dying the next morning."
+  PBNews.229.d:0 "Tragedy struck today as Acadia Minister Huey Long fell to his death while touring the Melbourne Agroplex. The Southern American populist had been growing in popularity for the last few years, arguing for an aggressive wealth redistribution plan to tackle Acadia's high unemployment and poverty.\n\nVisiting the Greater Melbourne Agroplex, Long was seeking solutions to the nation's population concentrations, but instead found tragedy when he lost his footing. According to witnesses, Long tumbled for over two minutes down a flight of stairs before being rushed to emergency care, dying the next morning."
   PBNews.229.a:0 "Truly one of the minds of a generation"
 
   PBNews.230.t:0 "THE RECLAMATION WAR"
@@ -1149,14 +1149,10 @@
   PBNews.289.d:0 "Following the dissolution of the Galician Occupation government, Russia has chosen to approach the Polish autonomy and offer them territorial concessions. Under what is being called the Krakow Award, the Polish Autonomy has been granted control of the former territories of Galicia.\n\nShocked crowds celebrate across Poland and Galicia, as Poland regains territories once thought permanently lost after the failure of the First National Awakening."
   PBNews.289.a:0 "Greater Poland, within the Empire?"
 
-  PBNews.291.t:0 "RUSSIA LEAVES THE PACTE"
-  PBNews.291.d:0 ""
-  PBNews.291.a:0 "An iron curtain descends on Europe."
-  PBNews.291.b:0 "They can't do that! Stop them or something!"
 
-  PBNews.292.t:0 "RUSSIAN INVASION OF IRAN"
-  PBNews.292.d:0 "Following tense negotiations and a flurry of refused demands, Russia has officially announced a “punitive” operation against their oil-rich southern neighbor. [RUS.GetLeader] has promised a swift victory to the war-weary Russian populace who paid for their victory in the Second Great War with their blood and gold.\n\n[PER.GetLeader] has already sent out a storm of pleas and requests across the globe to “keep his country from being the bear’s evening supper.” How long Iran can manage to keep the beast at bay is a question being asked around the globe."
-  PBNews.292.a:0 "The bear trades blood for oil."
+  PBNews.293.t:0 "UC CONTROLS THE CARIBBEAN"
+  PBNews.293.d:0 "Following the Unification of the Bahamas it seems like Philadelphias appetite for islands was still not satisfied. In recent weeks their government has made it clear to London that it should be their responsibility to administer the strategic Caribbean Islands of Britain. They  are in their backyard anyway and Britain is and was not able to ensure their safety. And so begrudgingly Britain relented and made way for change.\n\nThe people of the islands themselves have noticed now differnces. Just the representative of the governor has a new accent and a new flag. Same as always."
+  PBNews.293.a:0 "America has an even bigger lake now"
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
