--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -50,6 +50,10 @@ AME_Cost_Reduction_Corrupt_Special:0 "£decision_icon_small §YDecision Cost§! 
 
 AME_Midwest_Industry_Controls_Info:0 "§YAnglois States owned by the United Commonwealth will be included into the project§!"
 
+Automats_crisis_flag_tt:0 "§RThe Automat Crisis has hit the United Commonwealth§!\n"
+
+AME_Unlock_Decisions_to_Expand_West:0 "£decision_icon_small §PDecisions for to Manifest our Destiny in America will be unlocked§!"
+
 ##########################
 # PARTIES
 ##########################
@@ -1109,20 +1113,29 @@ PB_AME_Confederation_Spoils_desc:0 "While de jure, American does still remain un
 PB_AME_The_Empire_Green_Heart:0 "Green Heart of the Confederaion"
 PB_AME_The_Empire_Green_Heart_desc:0 "The primary reason for the Confederations existence is of course money. All empires are founded on a desire for profit and why should the largest the world has ever known be any different? Still, given our status within the empire as a near-equal to Britain, its not out of the question to send some dough the way of the other colonies. Should a time ever come when the nations of the Confederation must pick between us and Britain, they will remember which one actually gave them help when they needed it"
 PB_AME_Favors_in_HK:0 "Favors on the Pearl Delta"
-PB_AME_Favors_in_HK:0 "Favors on the Pearl Delta"
+PB_AME_Favors_in_HK_desc:0 "Hong Kong is where we like to do buisness.\nNowadays there are more Americans in Hong Kong then British actually running the place and making money.\nWe should see if we can get some more benefits and influence out of the Pearl River Dominion to guarentee that we get our fair share of the cake. We baked it ourselves, didnt we?\n\nMaybe we can make more dealsin Tianjing while we are there?"
 PB_AME_Royal_Airline:0 "Commonwealth Airline"
-PB_AME_Royal_Airline:0 "The Royal Airline"
+PB_AME_Royal_Airline_desc:0 "International Air-Travel is expanding day by day. The time has come that we ourselves have a greater impact.\nBefore the Formation of the Commonwealh Airline travel from one Britis Dominion was expensive, hard to get by and slow. But now citiziens can travel with the new modern machines of Commonwealth Airline.\nNo more small seats and cheap dinner and tea.\nAnd most importantly the prices are reasonable affordable!"
 PB_AME_Responsibiltiy_of_Automats_Crisis:0 "Who is responsible for all of this?"
+PB_AME_Responsibiltiy_of_Automats_Crisis_desc:0 "It goes without saying that this crisis has its origin point. That point is no other than the eternal British themselves and their clear lack of care for whatever goes on in what they choose to see as their little playhouses. Naturally, this won’t go unnoticed and it most certainly won’t go unpublished. With the press willing to back us on this, we’ll let the whole damn continent know who is behind this wretched situation, in all their lack of care and responsibility."
 PB_AME_Company_War:0 "The Puppet Schism"
+PB_AME_Company_War_desc:0 "London might think that all the dominions and colonies are loyal to them. But many seek guidance from an another continent. One that can guide and finance them better. One that actually cares for them.\n\nWe will make sure that our interests inside the Confederation are represented and equal power is ensured."
 PB_AME_Unify_Bahamas:0 "Unify the Bahamas"
-PB_AME_Protector_Caribean:0 "Protector of the Carribean"
+PB_AME_Unify_Bahamas_desc:0 "We’ve finally done it! The entirety of the Bahamas is at last under our protection, and we’ll certainly be sure to run it better than it had been previously. There are opportunities abound here for oil and other sources of wealth, and naturally, opportunities to expand our own influence within the rest of the empire. Let us not waste time with making sure that the bureaucracy accommodates these plans."
+PB_AME_Protector_Caribean:0 "Protector of the Caribbean"
+PB_AME_Protector_Caribean_desc:0 "We have shown already that our benevolent rule over their Bahamas has surpassed adequacy and reached high into excellency. So what is to stop us applying our excellence to the rest of the Caribbean? The British and their inefficient administration have long outstayed their welcome and usefulness, securing few profits and reducing all potential. It is high time that we nudged Westminster to make the right call and allow us to manifest our destiny for the good of our backyard lake."
 PB_AME_Rebuild_Acadia:0 "Take Care of Acadia"
+PB_AME_Rebuild_Acadia_desc:0 "Acada is without a doubt far better off within our sphere. The British have little time or desire to safeguard its needs and wants; where we could, as their big next door brother, quite easily handle this. Whilst it is true that many in London and even within Acadia would object to our… “closer” levels of influence, everyone knows already that it’s best for them, even if a little manoeuvring is required to jog their memory."
 PB_AME_Anglois_Crisis:0 "The Anglois Crisis"
+PB_AME_Anglois_Crisis_desc:0 "The Self-Determination of the Anglois can not simply be suppressed. It is our duty to see them freed from dastardly French oppression!\n\nBritain should be wise not to oppose us!\n\nThis our moment to manifest our might in this Coneferdation!\nOr is it the moment where Britains facade falls?"
 PB_AME_Governor_Edward_Crisis:0 "Edwards Fumble"
 PB_AME_Governor_Edward_Crisis_desc:0 "What Edward has done has shacken our nation to its core. As Governor General he represents the Crown and Empire in America and so his blunder puts all of them in a dark light. The people are angry and demand justice. This will not change for a long time and so we have decide how to act in the upcoming events."
 PB_AME_Governor_A_Course_of_Confrontation:0 "Confrontation"
+PB_AME_Governor_A_Course_of_Confrontation_desc:0 "Do we have anything really in common? Never have they truely regarded as their brothers or even their friends. Always their subjects - they just changed the phrasing.\nEven the name of this country is an insult "Commonwealth".\nThose powerhungry crooks always seek an oppurtunity to call this nation 'theirs' and force us to drink their tea. Those who ran away from these tyrants created this land and communities. Their hearts scream seeing the old Leviathan returning and our blood boils in return."
 PB_AME_Governor_Two_Empires:0 "Partnership"
+PB_AME_Governor_Two_Empires_desc:0 "Despite all hardships our two nations are still brothers at heart. Our ideals and dreams are the same. We share the same language. And both of our people love to drink tea.\n\nHow foolish would it be to simply give up all we have build up together for some more power. We have something truely special in this world. It would be sacrilige to burn this away."
 PB_AME_Influence_the_Corrupt_Isles:0 "Influences in Isles"
+PB_AME_Influence_the_Corrupt_Isles_desc:0 "Despite what many think not everyone living in Britain is loyal to the Crown and London.\n\nWe have several connections like in the EIEC or IBM who would rather have a American-Dominated Confederation. There are many who are tired of the old corrupt conservative world views which Buckingham and Westminister preach. And there are many more who desire actual autonomy. All little helpers benefiting us and hindering Londons efforts."
 PB_AME_Together_Forever:0 "For Another 300 Years"
 PB_AME_The_New_Imperial_Master:0 "Rising like Byzantium"
 PB_AME_Abandon_the_Isles:0 "Abandoning the Tyranny"
