--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -718,6 +718,8 @@
  VICTORY_POINTS_13087:0 "San Jose"
  VICTORY_POINTS_7630:0 "Panamá"
  VICTORY_POINTS_7622:0 "Havana"
+ VICTORY_POINTS_12304:0 "Kingston"
+ VICTORY_POINTS_3284:0 "Port of Spain"
  VICTORY_POINTS_7590:0 "Guantánamo"
  VICTORY_POINTS_4641:0 "Port-au-Prince"
  VICTORY_POINTS_9097:0 "Oranienbaum"
