slowly exterminating every bug

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -553,7 +553,7 @@
   Rasputin_Influence_1_tt:0 "At 10% Rasputinite Influence, the following national spirit will be activated: Raputinite Influences - §5Small§!\n§R-10% Stability§!\n§R-15% Political Power Gain§!\n§G+10% Division Recovery Rate§!"
   Rasputin_Influence_2_tt:0 "At 25% Rasputinite Influence, the following national spirit will be activated: Raputinite Influences - §5Medium§!\n§R-15% Stability§!\n§R-20% Political Power Gain§!\n§G+500 Weekly Manpower§!\n§G+5% Division Organization§!\n§G+15% Division Recovery Rate§!"
   Rasputin_Influence_3_tt:0 "At 50% Rasputinite Influence, the following national spirit will be activated: Raputinite Influences - §5Large§!\n§R-20% Stability§!\n§R-25% Political Power Gain§!\n§G+800 Weekly Manpower§!\n§G+8% Division Organization§!\n§G+20% Division Recovery Rate§!"
-  Rasputin_Influence_4_tt:0 "At 75% Rasputinite Influence, Rasputin will coup the government, activating his hidden path. The following national spirit will also be activated: Raputinite Influences - §5Very Large§!\n§R-20% Stability§!\n§R-25% Political Power Gain§!\n§G+800 Weekly Manpower§!\n§G+10% Division Organization§!\n§G+25% Division Recovery Rate§!"
+  Rasputin_Influence_4_tt:0 "At 75% Rasputinite Influence, the following national spirit will be activated: Raputinite Influences - §5Very Large§!\n§R-20% Stability§!\n§R-25% Political Power Gain§!\n§G+800 Weekly Manpower§!\n§G+10% Division Organization§!\n§G+25% Division Recovery Rate§!"
   
   ##########################
   # FOCUS
